# LV

./: .gitmodules  CMakeLists.txt  README.md  gen_Xcode.sh
src/: CMakeLists.txt  Symbol.cpp  Symbol.hpp  main.cpp  version.hpp.in
src/config/: syntax.json
src/input/: pl1.json
src/logic/symbol/: symbol.cpp  symbol.hpp
src/parser/: cfg_parser.cpp  cfg_parser.hpp
